--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,7 +18,9 @@ under the License.
 <%
   if current_page.data.includes
     current_page.data.includes.each do |include|
+      page_content += ("<div class='content " + include +"'>").html_safe
       page_content += partial("includes/#{include}")
+      page_content += "</div>".html_safe
     end
   end
 %>
@@ -29,6 +31,7 @@ under the License.
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="icon" href="images/favicon.png">
     <% if current_page.data.key?('meta') %>
       <% current_page.data.meta.each do |meta| %>
         <meta
@@ -116,12 +119,10 @@ under the License.
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
-      <div class="content">
-        <%= page_content %>
-      </div>
+      <%= page_content %>
       <div class="dark-box">
         <% if language_tabs.any? %>
-          <div class="lang-selector">
+          <div class="lang-selector" style="display:none">
             <% language_tabs.each do |lang| %>
               <% if lang.is_a? Hash %>
                 <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
