Remove dark side in success & errors

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -632,7 +632,7 @@ html, body {
   opacity: 0.8;
 }
 
-.introduction, .integrations, .urls, .config {
+.introduction, .integrations, .urls, .config, .success, .errors {
   background-color: $main-bg;
   padding-bottom: 14px;
   &.content {
