Service structure Status code for every endpoint

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -656,7 +656,8 @@ h2, h3 {
   &>h2[id='9-1-http-request'],
   &>h2[id='11-1-http-request'],
   &>h2[id='11-2-query-parameters'],
-  &>h2[id='11-3-places-attributes-response'] {
+  &>h2[id='11-3-places-attributes-response'],
+  &>h2[id='11-4-status-code'] {
     clear: unset;
   }
 }
