--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -654,6 +654,8 @@ h2, h3 {
   &>h2[id='6-1-http-request'],
   &>h2[id='6-2-signup-attributes-data'],
   &>h2[id='9-1-http-request'],
+  &>h2[id='9-2-query-parameters'],
+  &>h2[id='9-3-zone-attributes-response'],
   &>h2[id='11-1-http-request'],
   &>h2[id='11-2-query-parameters'],
   &>h2[id='11-3-places-attributes-response'],
