--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -663,3 +663,11 @@ h2, h3 {
     clear: unset;
   }
 }
+
+.logo,
+.toc-wrapper .logo {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
